--- a/themes/klno20/css/nav.css
+++ b/themes/klno20/css/nav.css
@@ -20,7 +20,7 @@
 }
 
 #nav {
-    padding: 1.2em 2em;
+    padding: 1.5em 2em;
     text-align: right;
     display: inline-block;
     float: right;
@@ -37,6 +37,7 @@
     margin-left: 1em;
     padding: 0;
     font-weight: bold;
+    font-size: 20px;
 }
 
 #nav a:hover, #nav-toggle:hover {
