--- a/themes/dbwebb/index.twig
+++ b/themes/dbwebb/index.twig
@@ -61,6 +61,11 @@
             </div>
         </div>
     </div>
+    
+    <div class="auto alert">
+        <h1 class="auto">Alert!</h1>
+    </div>
+
     <div class="main" role="main">
         <div class="container">
             {{ content }}
