--- a/themes/klno20-2/scss/style.scss
+++ b/themes/klno20-2/scss/style.scss
@@ -4,12 +4,22 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import '../../shared/fontawesome/scss/solid';
 @import '../../shared/fontawesome/scss/regular';
 @import '../../shared/fontawesome/scss/brands';
+@import '../../shared/scss/variables';
+
 
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap');
-@import '../css/oldstyle'
+@import '../css/oldstyle';
 
 * {
     font-family: 'Roboto', sans-serif;
+}
+
+p {
+    color: $text-color;
+}
+
+body {
+    background-color: $background-color;
 }
 
 h1,
@@ -18,5 +28,7 @@ h3,
 h4,
 h5,
 h6 {
-        font-family: 'Playfair Display', serif;
+    font-family: 'Playfair Display', serif;
+    color: $text-color;
+
 }
