--- a/themes/shared/scss/variables.scss
+++ b/themes/shared/scss/variables.scss
@@ -1,3 +1,6 @@
 $base-color: #00f !default; // blue
 $border-dark: rgba($base-color, 0.88) !default;
 $alert-box-size: 600px !default;
+
+$text-color: #333;
+$background-color: #f8f8f6;
