--- a/themes/klno20-2/css/style.css
+++ b/themes/klno20-2/css/style.css
@@ -6,7 +6,7 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poiret+One&family=Roboto&display=swap");
 html {
   line-height: 1.15;
   /* 1 */
@@ -6561,6 +6561,64 @@ li a {
   font-size: 2rem;
 }
 
+/* report.scss */
+.landingpage {
+  display: grid;
+  gap: 30px;
+}
+
+.landingpage a {
+  text-decoration: none;
+}
+
+.landingpage h1 {
+  grid-column: span 3;
+  justify-self: center;
+}
+
+.landingpage h2 {
+  border-top-left-radius: 19px;
+  border-top-right-radius: 19px;
+  background-color: #f4ddcd;
+  color: #f4917c;
+  text-transform: uppercase;
+}
+
+.kmom-box.project {
+  grid-column: span 3;
+}
+
+.kmom-box {
+  border: 2px solid #294548;
+  border-radius: 20px;
+  height: 100px;
+  margin-right: 12px;
+  margin-bottom: 12px;
+  box-shadow: 12px 12px 0px 0px #294548;
+}
+
+.kmom-box:hover {
+  border: 2px solid #294548;
+  border-radius: 20px;
+  height: 100px;
+  margin-left: 12px;
+  margin-top: 12px;
+  margin-bottom: 0px;
+  margin-right: 0px;
+  box-shadow: none;
+}
+
+.kmom-box p {
+  margin: 1em;
+}
+
+@media (max-width: 767px) {
+  .kmom-box,
+.landingpage h1,
+.kmom-box.project {
+    grid-column: span 4;
+  }
+}
 * {
   font-family: "Roboto", sans-serif;
 }
@@ -6579,6 +6637,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Playfair Display", serif;
+  font-family: "Poiret One", cursive;
   color: #333;
 }
