--- a/themes/klno20-2/scss/report.scss
+++ b/themes/klno20-2/scss/report.scss
@@ -60,7 +60,7 @@
 }
 
 .reportpage h1 {
-    grid-column: span 2 / 4;
+    grid-column: 2;
     justify-self: center;
 }
 
@@ -74,7 +74,7 @@
 }
 
 .sidebar {
-    grid-column: 1 / 2;
+    grid-column: 1;
     border: 2px solid #294548;
     background-color: #f4ddcd;
     text-transform: uppercase;
@@ -97,7 +97,7 @@
 }
 
 .report-text {
-    grid-column: 2 / 4;
+    grid-column: 2;
     margin-bottom: 3em;
 }
 
