--- a/themes/klno20-2/scss/oldstyle.css
+++ b/themes/klno20-2/scss/oldstyle.css
@@ -69,6 +69,11 @@ img {
     width: 180px;
 }
 
+.container img {
+    margin-bottom: 1.5em;
+    border-radius: 50px;
+}
+
 li {
     list-style: none;
 }
@@ -82,8 +87,6 @@ li a {
 
 .site-footer {
     flex: 0 0 auto;
-    background: #0c2f29;
-    color: #f4ddcd;
     padding: 2em;
 }
 
@@ -91,12 +94,7 @@ li a {
     padding-top: 0.6em;
 }
 
-.site-footer a {
-    color: #f4ddcd;
-}
-
 .site-footer a:hover {
-    color: #fa9782;
     transition: 0.6s;
 }
 
