--- a/themes/klno20-2/scss/variables-dark.scss
+++ b/themes/klno20-2/scss/variables-dark.scss
@@ -1,4 +1,32 @@
+// basic styling
 $font-color: rgb(241, 241, 241);
 $accent-color: rgba(217, 100, 70, 100);
 $background-color: #294548;
-$text-color: #fff;
+$text-color: #f8f8f6;
+$h-color: #edebe8;
+
+//Style for header
+$titlecolor: #132b3a;
+
+// Style for Footer
+$footer-background-color: #132b3a;
+$site-footer-a-hover: #cfa956;
+$footer-color: #e3e3c4;
+$footer-a-color: #e3e3c4;
+
+
+// Style for landingpage
+$landingpage-h2-backgroundcolor: #132b3a;
+$landingpage-h2-color: #cfa956;
+
+
+// Style for kmom-boxes
+$kmombox-background-color: #547675;
+$kmombox-border: #132b3a;
+$kmombox-shadow: #132b3a;
+
+//Style for sidebar
+$sidebar-background-color: #abbaa8;
+$sidebar-border: #132b3a;
+$sidebar-box-shadow: #132b3a;
+$sidebar-color: #132b3a;
