--- a/themes/klno20-2/report.twig
+++ b/themes/klno20-2/report.twig
@@ -37,7 +37,7 @@
 </a>
 <div class="title" {{ pages["_meta"].meta.tagline ? ' class="tagline"' }}>
     <a href="{{ "index"|link }}">
-        <h1>{{ site_title }}</h1>
+        <h1 class="title-h1">{{ site_title }}</h1>
         {{ pages["_meta"].meta.tagline|markdown }}
     </a>
 </div>
