--- a/themes/klno20-2/scss/style-dark.scss
+++ b/themes/klno20-2/scss/style-dark.scss
@@ -1,6 +1,7 @@
 @import 'common';
 @import 'variables-dark';
 
+//Basic style settings
 * {
     font-family: 'Poiret One', cursive;
 }
@@ -20,10 +21,65 @@ h4,
 h5,
 h6 {
     font-family: 'Poiret One', cursive;
-    color: $text-color;
-
+    color: $h-color;
 }
 
+//Style for images
 .flash-img {
-    filter: grayscale(60%);
+    filter: hue-rotate(40deg);
+}
+
+img {
+    filter: opacity(0.8);
+}
+
+// Style for header
+.title h1 {
+    color: $titlecolor;
+}
+
+.title p {
+    color: $titlecolor;
+}
+
+//Style for footer
+.site-footer {
+    background-color: $footer-background-color;
+    color: $footer-color;
+}
+
+.site-footer a {
+    color: $footer-a-color;
+}
+
+.site-footer a:hover {
+    color: $site-footer-a-hover;
+}
+
+//Style for landingpage
+.landingpage h2 {
+    background-color: $landingpage-h2-backgroundcolor;
+    color: $landingpage-h2-color;
+}
+
+//Style for kmomboxes
+.kmom-box {
+    border: 2px solid $kmombox-border;
+    box-shadow: 12px 12px $kmombox-shadow;
+    background-color: $kmombox-background-color;
+}
+
+.kmom-box:hover {
+    border: 2px solid $kmombox-border;
+}
+
+//Style for sidebar
+.sidebar a {
+    background-color: $sidebar-background-color;
+    border: 2px solid $sidebar-border;
+    box-shadow: 12px 12px $sidebar-box-shadow;
+}
+
+.reportpage h2 {
+    color: $sidebar-color;
 }
