--- a/themes/klno20-2/scss/variables.scss
+++ b/themes/klno20-2/scss/variables.scss
@@ -1,3 +1,31 @@
+// basic styling
 $font-color: rgb(241, 241, 241);
 $accent-color: rgba(217, 100, 70, 100);
-$background-color: rgb(250, 250, 250);
+$background-color: #f8f8f6;
+$h-color: #f4917c;
+$text-color: #333;
+
+//Style for header
+$titlecolor: #132b3a;
+
+// Style for Footer
+$footer-background-color: #0c2f29;
+$footer-color: #f4ddcd;
+$site-footer-a-hover: #f4917c;
+
+
+// Style for landingpage
+$landingpage-h2-backgroundcolor: #f4ddcd;
+$landingpage-h2-color: #f4917c;
+
+
+// Style for kmom-boxes
+$kmombox-background-color: #f8f8f6;
+$kmombox-border: #294548;
+$kmombox-shadow: #294548;
+
+//Style for sidebar
+$sidebar-background-color: #f4ddcd;
+$sidebar-border: #294548;
+$sidebar-box-shadow: #294548;
+$sidebar-color: #f4917c;
