--- a/themes/klno20-2/css/style-dark.css
+++ b/themes/klno20-2/css/style-dark.css
@@ -6522,15 +6522,14 @@ h1 {
   margin: 0 20%;
 }
 
-img {
-  width: 180px;
-}
-
 .container img {
-  margin-bottom: 1.5em;
-  border-radius: 50px;
+  width: 340px;
 }
 
+/* .container img {
+    margin-bottom: 1.5em;
+    border-radius: 50px;
+} */
 li {
   list-style: none;
 }
@@ -6765,6 +6764,17 @@ li a {
 
 .title h1 {
   margin: 0.1em;
+}
+
+.color-palette {
+  display: flex;
+  justify-content: center;
+}
+
+.logo-img {
+  width: 180px;
+  margin-bottom: 1.5em;
+  border-radius: 50px;
 }
 
 * {
