--- a/themes/klno20-2/scss/common.scss
+++ b/themes/klno20-2/scss/common.scss
@@ -20,3 +20,14 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 .title h1 {
     margin: 0.1em;
 }
+
+.color-palette {
+    display: flex;
+    justify-content: center;
+}
+
+.logo-img {
+    width: 180px;
+    margin-bottom: 1.5em;
+    border-radius: 50px;
+}
