--- a/themes/klno20/index.twig
+++ b/themes/klno20/index.twig
@@ -18,12 +18,15 @@
         <link rel="canonical" href="{{ current_page.url }}" />
     {% endif %}
 
-    <link rel="stylesheet" href="{{ theme_url }}/../shared/css/font-awsome.min.css" type="text/css" />
     <!-- Insert font choice here -->
-    {# <link rel="stylesheet" href="{{ theme_url }}/../shared//css/dorid-sans.css" type="text/css" /> #}
+
     <!-- End -->
-    <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
-    <link rel="stylesheet" href="{{ theme_url }}/css/nav.css" type="text/css" />
+    {% if config.session.theme == "dark" %}
+        <link rel="stylesheet" href="{{ theme_url }}/css/style-dark.css" type="text/css" />
+    {% else %}
+        <link rel="stylesheet" href="{{ theme_url }}/css/style.css" type="text/css" />
+        <link rel="stylesheet" href="{{ theme_url }}/css/nav.css" type="text/css" />
+    {% endif %}
 
 </head>
 <body{% if config.theme_config.widescreen %} class="widescreen"{% endif %}>
@@ -42,8 +45,14 @@
     <ul>
         {% for page in pages(depthOffset=-1) if page.title and not page.hidden %}
         <li{% if page.id == current_page.id %} class="active" {% endif %}>
-            <a href="{{ page.url }}">{{ page.title }}</a>
-            </li>
+            <a href="{{ page.url }}">
+                {% if page.meta.icon %}
+                <i class="{{ page.meta.icon }}"></i>
+                {% else %}
+                    {{ page.title }}
+                {% endif %}
+            </a>
+        </li>
             {% endfor %}
     </ul>
 </div>
@@ -63,7 +72,7 @@
                     <!-- Loads from FontAwesome (themes/shared/css/font-awesome.min.css) -->
                     {% for social in pages["_meta"].meta.social %}
                         <a href="{{ social.url }}" title="{{ social.title }}" role="button">
-                            <i class="fa fa-{{ social.icon }}" aria-hidden="true"></i>
+                            <i class="{{ social.icon }}" aria-hidden="true"></i>
                             <span class="sr-only">{{ social.title }}</span>
                         </a>
                     {% endfor %}
