Updated flash image

--- a/themes/klno20/gallery.twig
+++ b/themes/klno20/gallery.twig
@@ -57,7 +57,7 @@
     </ul>
 </div>
 <div class="flash-region">
-  <img class="flash-img" src="{{ base_url }}/image/header-design.png?sc=banner1&a=40,0,0,0">
+  <img class="flash-img" src="{{ base_url }}/image/header-pexels-2.png?sc=banner1&a=40,0,0,0">
 </div>
 </header>
     <div class="main" id="main" role="main">
