--- a/themes/klno20/css/style-dark.css
+++ b/themes/klno20/css/style-dark.css
@@ -6493,6 +6493,7 @@ h1 {
 
 .flash-img {
   width: 100%;
+  margin-bottom: 0 auto;
 }
 
 .logo {
@@ -6580,7 +6581,7 @@ li a {
 }
 
 #nav {
-  padding: 1.5em 2em;
+  padding: 1.7em 2em;
   text-align: right;
   display: inline-block;
   float: right;
@@ -6742,6 +6743,24 @@ li a {
 
 .report-text h3 {
   font-size: 20px;
+}
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 @media (max-width: 767px) {
