--- a/themes/klno20/css/style.css
+++ b/themes/klno20/css/style.css
@@ -6493,6 +6493,7 @@ h1 {
 
 .flash-img {
   width: 100%;
+  margin-bottom: 0 auto;
 }
 
 .logo {
@@ -6580,7 +6581,7 @@ li a {
 }
 
 #nav {
-  padding: 1.5em 2em;
+  padding: 1.7em 2em;
   text-align: right;
   display: inline-block;
   float: right;
@@ -6744,6 +6745,24 @@ li a {
   font-size: 20px;
 }
 
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 @media (max-width: 767px) {
   .kmom-box,
 .landingpage h1,
@@ -6807,7 +6826,8 @@ li a {
 
 p {
   color: #333;
-  font-size: 18px;
+  font-size: 20px;
+  font-style: normal;
 }
 
 body {
