--- a/themes/klno20/report.twig
+++ b/themes/klno20/report.twig
@@ -45,13 +45,19 @@
     <ul>
         {% for page in pages(depthOffset=-1) if page.title and not page.hidden %}
         <li{% if page.id == current_page.id %} class="active" {% endif %}>
-            <a href="{{ page.url }}">{{ page.title }}</a>
-            </li>
+            <a href="{{ page.url }}">
+                {% if page.meta.icon %}
+                <i class="{{ page.meta.icon }}"></i>
+                {% else %}
+                    {{ page.title }}
+                {% endif %}
+            </a>
+        </li>
             {% endfor %}
     </ul>
 </div>
 <div class="flash-region">
-  <img class="flash-img" src="{{ base_url }}/image/header-design.png?sc=banner1&a=40,0,0,0">
+  <img class="flash-img" src="{{ base_url }}/image/header-pexels-2.png?sc=banner1&a=40,0,0,0">
 </div>
 </header>
     <div class="main" id="main" role="main">
