--- a/themes/klno20/scss/report.scss
+++ b/themes/klno20/scss/report.scss
@@ -93,6 +93,26 @@
     font-size: 20px;
 }
 
+// Style for the iframe element
+
+.embed-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 @media (max-width: 767px) {
     .kmom-box,
     .landingpage h1,
