Finished analysis 02_load of kmom05

--- a/themes/klno20/scss/style-dark.scss
+++ b/themes/klno20/scss/style-dark.scss
@@ -25,6 +25,10 @@ h6 {
     color: $h-color;
 }
 
+.container a {
+    color: $link-color;
+}
+
 //Style for images
 .flash-img {
     filter: hue-rotate(40deg);
