--- a/themes/klno20/scss/variables-dark.scss
+++ b/themes/klno20/scss/variables-dark.scss
@@ -2,6 +2,7 @@
 $background-color: #294548;
 $text-color: #f8f8f6;
 $h-color: #edebe8;
+$link-color: #f8f8f6;
 
 //Style for header
 $titlecolor: #132b3a;
