--- a/themes/klno20/scss/variables.scss
+++ b/themes/klno20/scss/variables.scss
@@ -2,6 +2,7 @@
 $background-color: #f8f8f6;
 $h-color: #f4917c;
 $text-color: #333;
+$link-color: #333;
 
 //Style for header
 $titlecolor: #132b3a;
