First update of kmom06

--- a/themes/klno20/css/style.css
+++ b/themes/klno20/css/style.css
@@ -6867,7 +6867,7 @@ h6 {
 
 .landingpage h2 {
   background-color: #f4ddcd;
-  color: #f4917c;
+  color: #294548;
 }
 
 .kmom-box {
@@ -6887,5 +6887,5 @@ h6 {
 }
 
 .reportpage h2 {
-  color: #f4917c;
+  color: #294548;
 }
