--- a/themes/klno20/scss/style-dark.scss
+++ b/themes/klno20/scss/style-dark.scss
@@ -85,6 +85,6 @@ img {
     box-shadow: 12px 12px $sidebar-box-shadow;
 }
 
-.reportpage h2 {
-    color: $sidebar-color;
+.sidebar h2 {
+    color: $sidebar-h2;
 }
