--- a/themes/klno20/scss/variables-dark.scss
+++ b/themes/klno20/scss/variables-dark.scss
@@ -29,3 +29,7 @@ $sidebar-background-color: #abbaa8;
 $sidebar-border: #132b3a;
 $sidebar-box-shadow: #132b3a;
 $sidebar-color: #132b3a;
+$sidebar-h2: #132b3a;
+
+//Style for report Page
+$reportpageh2: #edebe8;
