--- a/themes/klno20/scss/variables.scss
+++ b/themes/klno20/scss/variables.scss
@@ -1,6 +1,6 @@
 // basic styling
 $background-color: #f8f8f6;
-$h-color: #f4917c;
+$h-color: #294548;
 $text-color: #333;
 $link-color: #333;
 
@@ -15,7 +15,7 @@ $site-footer-a-hover: #f4917c;
 
 // Style for landingpage
 $landingpage-h2-backgroundcolor: #f4ddcd;
-$landingpage-h2-color: #f4917c;
+$landingpage-h2-color: #294548;
 
 
 // Style for kmom-boxes
@@ -27,4 +27,4 @@ $kmombox-shadow: #294548;
 $sidebar-background-color: #f4ddcd;
 $sidebar-border: #294548;
 $sidebar-box-shadow: #294548;
-$sidebar-color: #f4917c;
+$sidebar-color: #294548;
